--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "antd-mobile": "^2.2.2",
+    "axios": "^0.18.0",
     "prop-types": "^15.6.2",
     "rc-form": "^2.2.1",
     "react": "^16.4.1",
