--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "antd-mobile": "^2.2.2",
     "axios": "^0.18.0",
+    "moment": "^2.22.2",
     "prop-types": "^15.6.2",
     "rc-form": "^2.2.1",
     "react": "^16.4.1",
