modify css scheme

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "start": "cross-env REACT_APP_APPID=wx6737d318e27dab75 react-app-rewired start",
     "build": "cross-env REACT_APP_APPID=wx6737d318e27dab75 react-app-rewired build && cp -r ./build/** ./survey/",
+    "build:prod": "cross-env REACT_APP_APPID=wx6737d318e27dab75 react-app-rewired build && cp -r ./build/** ./survey/",
     "test": "react-app-rewired test --env=jsdom",
     "eject": "react-app-rewired eject"
   },
