--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "disease-survey",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://pci.violetqqy.com/survey",
-  "proxy": "https://pci.violetqqy.com",
+  "homepage": "https://www.qcxin.com/survey",
+  "proxy": "https://www.qcxin.com",
   "scripts": {
     "start": "cross-env REACT_APP_APPID=wx6737d318e27dab75 react-app-rewired start",
+    "build": "npm run build:prod",
     "build:test": "cross-env REACT_APP_APPID=wx6737d318e27dab75 react-app-rewired build && cp -r ./build/** ./survey/",
     "build:prod": "cross-env REACT_APP_APPID=wx017488f36de81e22 react-app-rewired build && cp -r ./build/** ./survey/",
     "test": "react-app-rewired test --env=jsdom",
