0104新问卷添加

--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "disease-survey",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://www.qcxin.com/disease-survey",
-  "proxy": "https://www.qcxin.com",
+  "homepage": "https://pci.violetqqy.com/pci-operation",
+  "proxy": "https://pci.violetqqy.com",
   "scripts": {
     "start": "cross-env REACT_APP_APPID=wx6737d318e27dab75 react-app-rewired start",
     "build": "npm run build:prod",
